# GuideAlignment

./: CMakeLists.txt  LICENSE.md  README.md
include/: align_algorithms.hpp  fasta_entry.hpp  fasta_parser.hpp  fasta_sequence.hpp  sub_matrix.hpp
src/: align_algorithms.cpp  fasta_entry.cpp  fasta_parser.cpp  fasta_sequence.cpp  main.cpp
